working svm algorithm

--- a/templates/front/landing_page.html
+++ b/templates/front/landing_page.html
@@ -19,7 +19,7 @@
    <div class="row">
     <div class="col-md-3"></div>
     <div style="text-align:center; " class="col-md-5">
-        <p style=" font-size: 20px; margin-left: 100px;" >This is a system which makes predictions on couties affected may have been 
+        <p style=" font-size: 20px; margin-left: 100px;" >This is a system which makes predictions on counties That have been 
             affected by hunger. It uses a model tat is powered by machine learning algoritm Known as 
             Support Vector Machine (SVM)
         </p>
@@ -28,7 +28,7 @@
             <div class="col-md-4"></div>
             {% if user.is_authenticated %}
             <div class="col-md-6">
-                <a class="btn btn-success btn-block float-left" href="{% url 'logout' %}">Logout</a>
+                <a class="btn btn-success btn-block " href="{% url 'logout' %}">Logout</a>
             </div>
             
             {% else %}
