--- a/templates/users/logout.html
+++ b/templates/users/logout.html
@@ -21,7 +21,7 @@
                 <div class="col alert alert-success m-3">
                     <h5 style="text-align: center;">Logout successfull !! </h5> 
                 </div>
-                        <a class="btn btn-primary m-3 "type="submit" href="{% url 'login' %}">Login</a>
+                        <a class="btn btn-primary m-3 "type="submit" href="{% url 'index_page' %}">Home page</a>
                 </div>
             </div>       
           </div>
