1st project refractoring

--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -63,6 +63,8 @@
           <li><a href="{% url 'index_page' %}">Home</a></li>
           <span class="text-dark">.........</span>
           <li><a href="{% url 'visualizations' %}">Visualizations</a></li>
+          <span class="text-dark">.........</span>
+          <li><a href="{% url 'results_page' %}">Predictions</a></li>
           
           <span class="text-dark">.........</span>
           
