--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -23,7 +23,34 @@
                 <h3 style="font-family:'Times New Roman', Times, serif;" >Hunger prediction Variable Keys: </h3>
             </div>
             <div class="card card-body p-2">
-               
+               <h3 style="font-family:'Times New Roman', Times, serif;" class="text-secondary" >Rainfall</h3>
+               <table class="table">
+                <thead>
+                  <tr>
+                    <th class="text-primary" scope="col ">Key </th>
+                    <th class="text-success" scope="col">Value</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="text-secondary">
+                    <td>0-4</td>
+                    <td>Poor Rainfall</td>
+                  </tr>
+                  <tr class="text-secondary">
+                    <td>5-15</td>
+                    <td>Average Rainfall</td>
+                  </tr>
+                  <tr class="text-secondary">
+                    <td>16-25</td>
+                    <td>Good Amount Rainfall</td>
+                  </tr>
+                  <tr class="text-secondary">
+                    <td>25-35</td>
+                    <td>Exeplary Amount Rainfall</td>
+                  </tr>
+                  
+                </tbody>
+              </table>
             </div>
         </div>
     </div>
